Closed Bug 1700885 Opened 5 years ago Closed 5 years ago

Emitted stack traces cause automation problems in fuzzing

Categories

(Core :: mozglue, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 --- fixed

People

(Reporter: decoder, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In bug 1699375, stack traces on abort were enabled by default for the JS shell (with no way to disable this behavior at runtime). This is causing major issues in fuzzing with 5-10k frames being spilled out in some cases, slowing down the crash processing as well as hiding important errors on stderr (such as the unhandlable oom marker).

Are these traces used beyond our internal CI automation? If not, then I suggest disabling them by default at runtime, otherwise to add a runtime option to disable them. Having stacks spilled out by default can also be disruptive when working with the shell manually.

Flags: needinfo?(mh+mozilla)

Set release status flags based on info from the regressing bug 1699375

WalkTheStack* is the function that is being called to print stacks to
the user on e.g. MOZ_CRASH on debug builds. Until bug 1699375, some
cases weren't covered, which now cause unwanted side-effects with e.g.
fuzzing. At least as a stop-gap, allow to runtime-disable the behavior
via an environment variable.

Other uses of the stack-walker, like the profiler's, are not affected
when setting the environment variable.

Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED

Sorry for the delay. There was the week-end, and I was weighting whether to disable entirely for spidermonkey standalone builds (which I don't think you're using anyways), or whether the other problems I've encountered and the questions they raise should cause a rollback of bug 1699375. I'm not yet convinced the answer is positive in both cases, so let's go with this stop-gap solution. Christian, is that enough to unblock you?

Flags: needinfo?(mh+mozilla) → needinfo?(choller)

Yes, I think that should solve the problems for now, thanks!

Flags: needinfo?(choller)
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/5934471255ea Add a runtime way to disable MozWalkTheStack. r=Gankra
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: